--- a/templates/home-no-profile.html
+++ b/templates/home-no-profile.html
@@ -1,49 +1,38 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-    <title>Expenses Tracker</title>
-</head>
+{% extends 'base.html' %}
 
-<body>
-
+{% block navigation %}
 <!-- Navigation Bar -->
 <nav>
     <ul>
         <li class="img"><img src="/static/images/dollar.png" alt="dollar"></li>
-        <li><a href="#">Expenses Tracker</a></li>
+        <li><a href="{% url 'index with profile' %}">Expenses Tracker</a></li>
     </ul>
 </nav>
 <!-- End Navigation Bar -->
-<div class="body">
+{% endblock %}
 
+{% block content %}
     <h1>Enter your data</h1>
     <!-- Profile Create Form -->
     <div class="form">
-        <form method="POST">
-            <label for="budget">Budget</label>
-            <input type="number" name="budget" required="" id="budget">
+        <form action="{% url 'index no profile' %}" method="post" enctype="multipart/form-data">
+            <label for="budget">Budget:</label>
+            {{ form.budget }}
 
-            <label for="firstName">First Name</label>
-            <input type="text" name="first_name" maxlength="15" required="" id="firstName">
+            <label for="firstName">First Name:</label>
+            {{ form.first_name }}
 
-            <label for="lastName">Last Name</label>
-            <input type="text" name="last_name" maxlength="15" required="" id="lastName">
+            <label for="lastName">Last Name:</label>
+            {{ form.last_name }}
 
             <label for="image">Profile Image:</label>
-            <input type="file" class="form-file" name="last_name" id="image">
+            {{ form.profile_image }}
 
-            <!-- Profile Create Button -->
+            {% csrf_token %}
+
             <input type="submit" value="Submit">
         </form>
     </div>
     <!-- End Profile Create Form -->
-</div>
 
-<footer>
-    <div>Python Web Basics Exam Preparation @SoftUni</div>
-</footer>
-
-</body>
-</html>
+{% endblock %}
