--- a/templates/profile-delete.html
+++ b/templates/profile-delete.html
@@ -1,37 +1,14 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-    <title>Expenses Tracker</title>
-</head>
-
-<body>
-
-<!-- Navigation Bar -->
-<nav>
-    <ul>
-        <li class="img"><img src="/static/images/dollar.png" alt="dollar"></li>
-        <li><a href="#">Expenses Tracker</a></li>
-        <li class="right"><a href="#">Profile</a></li>
-    </ul>
-</nav>
-<!-- End Navigation Bar -->
-
-<div class="body">
+{% extends 'base.html' %}
+{% block content %}
     <!-- Delete Profile Form -->
     <h1>Are you sure you want to delete your profile?</h1>
-    <form method="POST">
+    <form action="{% url 'delete profile' %}" method="post">
+
+        {{ form }}
 
         <!-- Confirm Button -->
         <button class="button delete-lg">Confirm</button>
+        {% csrf_token %}
     </form>
     <!-- End Delete Profile Form -->
-</div>
-
-<footer>
-    <div>Python Web Basics Exam Preparation @SoftUni</div>
-</footer>
-
-</body>
-</html>
+{% endblock %}
