--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,51 +1,32 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-    <title>Expenses Tracker</title>
-</head>
-
-<body>
-
-<!-- Navigation Bar -->
-<nav>
-    <ul>
-        <li class="img"><img src="/static/images/dollar.png" alt="dollar"></li>
-        <li><a href="#">Expenses Tracker</a></li>
-        <li class="right"><a href="#">Profile</a></li>
-    </ul>
-</nav>
-<!-- End Navigation Bar -->
-
-<div class="body">
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
     <!-- Your Profile Data -->
     <h1>Your Profile</h1>
     <div class="expenses-container">
         <div class="expense-container">
             <!-- Full Name -->
-            <h2>Aleksandra Raykova</h2>
+            <h2>{{ current_object.get_full_name }}</h2>
+
             <!-- Profile Image -->
-            <img src="/static/images/user.png" alt="profile pic">
+            {% if current_object.profile_image %}
+                <img src="{{ current_object.profile_image.url }}" alt="profile pic">
+            {% else %}
+                <img src="{% static 'images/user.png' %}" alt="profile pic">
+            {% endif %}
+
             <!-- Profile Description -->
             <!-- Total Items Bought -->
-            <p>Total Items Bought: 2</p>
+            <p>Total Items Bought: {{ items_bought }}</p>
             <!-- Budget Left -->
-            <p>Budget Left: 100.00$</p>
+            <p>Budget Left: {{ money_left | floatformat:2 }}$</p>
             <div class="right">
                 <!-- Edit Profile Button -->
-                <a class="button edit" href="#">Edit Profile</a>
+                <a class="button edit" href="{% url 'edit profile' %}">Edit Profile</a>
                 <!-- Delete Profile Button -->
-                <a class="button delete" href="#">Delete Profile</a>
+                <a class="button delete" href="{% url 'delete profile' %}">Delete Profile</a>
             </div>
         </div>
     </div>
     <!-- End Your Profile Data -->
-</div>
-
-<footer>
-    <div>Python Web Basics Exam Preparation @SoftUni</div>
-</footer>
-
-</body>
-</html>
+{% endblock %}
